<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.idolgo.Categories">

        <LinearLayout
            android:id="@+id/categories0"
            android:tag="0"
            android:clickable="true"
            android:onClick="next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="25sp"
            android:layout_marginLeft="100sp"
            android:layout_marginRight="100sp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/categories0"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@drawable/shape_category"
                android:layout_weight="1"
                android:paddingLeft="10sp"
                android:drawableLeft="@drawable/top10"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:background="@drawable/shape_category2"
                />

        </LinearLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <LinearLayout
            android:id="@+id/categories1"
            android:tag="1"
            android:clickable="true"
            android:onClick="next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="25sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/categories1"
                android:textSize="13sp"
                android:gravity="center"
                android:textStyle="bold"

                android:background="@drawable/shape_category"
                android:layout_weight="1"
                android:drawableLeft="@drawable/traditional_heritage"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:background="@drawable/shape_category2"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/categories2"
            android:tag="2"
            android:clickable="true"
            android:onClick="next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="25sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/categories2"
                android:textSize="15sp"
                android:gravity="center"
                android:textStyle="bold"

                android:background="@drawable/shape_category"
                android:layout_weight="1"
                android:padding="5dp"
                android:drawableLeft="@drawable/hot_place"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:background="@drawable/shape_category2"
                />


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <LinearLayout
            android:id="@+id/categories3"
            android:tag="3"
            android:clickable="true"
            android:onClick="next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="25sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/categories3"
                android:textSize="15sp"
                android:gravity="center"
                android:textStyle="bold"

                android:background="@drawable/shape_category"
                android:layout_weight="1"
                android:padding="5dp"
                android:drawableLeft="@drawable/food_streets"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:background="@drawable/shape_category2"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/categories4"
            android:tag="4"
            android:clickable="true"
            android:onClick="next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="25sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/categories4"
                android:textSize="15sp"
                android:gravity="center"
                android:textStyle="bold"

                android:background="@drawable/shape_category"
                android:layout_weight="1"
                android:padding="5dp"
                android:drawableLeft="@drawable/shopping"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:background="@drawable/shape_category2"
                />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <LinearLayout
            android:id="@+id/categories5"
            android:tag="5"
            android:clickable="true"
            android:onClick="next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="25sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/categories5"
                android:textSize="15sp"
                android:gravity="center"
                android:textStyle="bold"

                android:background="@drawable/shape_category"
                android:layout_weight="1"
                android:padding="5dp"
                android:drawableLeft="@drawable/night_life"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:background="@drawable/shape_category2"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/categories6"
            android:tag="6"
            android:clickable="true"
            android:onClick="next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="25sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/categories6"
                android:textSize="15sp"
                android:gravity="center"
                android:textStyle="bold"

                android:background="@drawable/shape_category"
                android:layout_weight="1"
                android:padding="5dp"
                android:drawableLeft="@drawable/korean_wave"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:background="@drawable/shape_category2"
                />

        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

        <LinearLayout
            android:id="@+id/categories7"
            android:tag="7"
            android:clickable="true"
            android:onClick="next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="25sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/categories7"
                android:textSize="15sp"
                android:gravity="center"
                android:textStyle="bold"

                android:background="@drawable/shape_category"
                android:layout_weight="1"
                android:padding="5dp"
                android:drawableLeft="@drawable/nature"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:background="@drawable/shape_category2"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/categories8"
            android:tag="8"
            android:clickable="true"
            android:onClick="next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="25sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/categories8"
                android:textSize="15sp"
                android:gravity="center"
                android:textStyle="bold"

                android:background="@drawable/shape_category"
                android:layout_weight="1"
                android:padding="5dp"
                android:drawableLeft="@drawable/museums"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:background="@drawable/shape_category2"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>